Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -323,15 +323,15 @@ footer a{color:#d8dbf3}
              alt="Supermercado Campestrini" loading="lazy">
       </div>
       
-      <!-- TAK Metalúrgica (fundo preto para contraste) -->
+      <!-- TAK Metalúrgica -->
       <div class="logo-box reveal" style="background:#000;">
         <img src="https://metalurgicatak.com.br/public/assets/img/logo_branco.png" 
              alt="TAK Metalúrgica" loading="lazy">
       </div>
       
-      <!-- CrossFit Blumenau -->
+      <!-- CrossFit Blumenau (link corrigido) -->
       <div class="logo-box reveal">
-        <img src="https://i.ibb.co/2dBn4bM/crossfit-blumenau.png" 
+        <img src="https://i.postimg.cc/9fN9Lz0K/crossfit-blumenau-logo.png" 
              alt="CrossFit Blumenau" loading="lazy">
       </div>
     </div>
@@ -352,46 +352,6 @@ footer a{color:#d8dbf3}
     </div>
   </div>
 </section>
-
-<style>
-.logos {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-  flex-wrap: wrap;
-  margin: 30px 0;
-}
-.logo-box {
-  flex: 0 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #fff;
-  border-radius: 12px;
-  padding: 14px 18px;
-  min-width: 120px;
-  min-height: 80px;
-  box-shadow: 0 4px 12px rgba(0,0,0,.05);
-  transition: transform .2s, box-shadow .2s;
-}
-.logo-box img {
-  max-height: 70px;
-  max-width: 160px;
-  object-fit: contain;
-  display: block;
-  filter: grayscale(20%);
-  transition: filter .2s, transform .2s;
-}
-.logo-box:hover img {
-  filter: grayscale(0%);
-  transform: scale(1.05);
-}
-.logo-box:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 6px 16px rgba(0,0,0,.1);
-}
-</style>
 
 <!-- SEGURANÇA -->
 <section class="section">
