--- a/presentation.html
+++ b/presentation.html
@@ -142,7 +142,7 @@ const slides = [
         <div class="space-y-4 max-w-5xl mx-auto">
           ${[
             '🔄 Ecossistema completo: vagas + capacitação + bem-estar',
-            '🏪 Foco em PME\\'s com planos acessíveis',
+            '🏪 Foco em PMEs com planos acessíveis',
             '🤝 Inclusão social acessível para jovens em formação',
             '📊 Dados e relatórios de impacto detalhados'
           ].map((t,i) => `
