--- a/presentation.html
+++ b/presentation.html
@@ -260,7 +260,7 @@ const slides = [
         <h2 class="text-4xl md:text-5xl font-bold text-center text-primary">Gamificação e Capacitação</h2>
         <div class="space-y-4 max-w-5xl mx-auto">
           <div class="p-6 md:p-8 bg-gradient-to-r from-primary/20 to-accent/20 border border-primary/30 rounded-2xl shadow">
-            <p class="text-lg md:text-xl font-medium text-center">🪙 Usuários ganham coins ao concluir trilhas e testes</p>
+            <p class="text-lg md:text-xl font-medium text-center"<p class="...">🪙 Usuários ganham coins ao concluir trilhas e testes</p>
           </div>
           <div class="p-6 md:p-8 bg-gradient-to-r from-accent/20 to-primary/20 border border-accent/30 rounded-2xl shadow">
             <p class="text-lg md:text-xl font-medium text-center">🎁 Coins trocados por benefícios e microcertificações</p>
@@ -347,6 +347,7 @@ const slides = [
               <div class="w-24 h-24 bg-primary/30 rounded-full mx-auto flex items-center justify-center text-4xl">👨‍💼</div>
               <h3 class="text-2xl md:text-3xl font-bold">Rodrigo Volpato</h3>
               <p class="text-base md:text-xl text-slate-600">Fundador e CEO</p>
+              <p class="text-base md:text-xl text-slate-600">Fundador e CEO — <a href="https://instagram.com/rodrigovolpa" target="_blank" class="text-primary hover:underline">@rodrigovolpa</a></p>
             </div>
           </div>
           <div class="p-6 bg-accent/15 border border-accent/40 rounded-2xl shadow">
@@ -372,7 +373,12 @@ const slides = [
             <p class="text-lg md:text-xl font-medium">📧 contato@appmatchwork.com.br</p>
           </div>
           <div class="p-4 bg-accent/10 border border-accent/30 rounded-2xl">
-            <p class="text-lg md:text-xl font-medium">🔗 LinkedIn + Instagram</p>
+            <a href="https://www.linkedin.com/company/matchworkoficial" target="_blank" class="block p-4 bg-accent/10 border border-accent/30 rounded-2xl text-lg md:text-xl font-medium hover:bg-accent/20 transition">
+  🔗 LinkedIn
+</a>
+<a href="https://instagram.com/matchwork.oficial" target="_blank" class="block p-4 bg-primary/10 border border-primary/30 rounded-2xl text-lg md:text-xl font-medium hover:bg-primary/20 transition">
+  📸 Instagram @matchwork.oficial
+</a>
           </div>
         </div>
         <a href="mailto:contato@appmatchwork.com.br"
