--- a/presentation.html
+++ b/presentation.html
@@ -155,39 +155,42 @@ const slides = [
     `
   },
   {
-    title: 'Modelos de Receita',
-    background: 'bg-gradient-to-br from-white to-slate-100',
-    html: `
-      <div class="h-full flex flex-col justify-center space-y-6 px-4">
-        <h2 class="text-4xl md:text-5xl font-bold text-center text-primary">Modelos de Receita</h2>
-        <div class="grid md:grid-cols-2 gap-6 max-w-6xl mx-auto">
-          <div>
-            <h3 class="text-xl md:text-2xl font-bold text-center text-accent mb-3">Para Empresas</h3>
-            ${[
-              '🆓 Gratuito (vaga teste limitada)',
-              '🎯 One-Shot (até preencher vaga ou 3 meses)',
-              '💼 Assinatura mensal (vagas ilimitadas)'
-            ].map(t => `
-              <div class="p-5 bg-accent/10 border border-accent/30 rounded-2xl mb-3">
-                <p class="font-medium">${t}</p>
-              </div>
-            `).join('')}
-          </div>
-          <div>
-            <h3 class="text-xl md:text-2xl font-bold text-center text-primary mb-3">Para Candidatos</h3>
-            ${[
-              '🆓 Gratuito (acesso básico)',
-              '⭐ Premium (R$14,90/mês)',
-              '🎓 Futuro: CPA/CPL de capacitação'
-            ].map(t => `
-              <div class="p-5 bg-primary/10 border border-primary/30 rounded-2xl mb-3">
-                <p class="font-medium">${t}</p>
-              </div>
-            `).join('')}
-          </div>
+   {
+  title: 'Modelos de Receita',
+  background: 'bg-gradient-to-br from-white to-slate-100',
+  html: `
+    <div class="h-full flex flex-col justify-center space-y-6 px-4">
+      <h2 class="text-4xl md:text-5xl font-bold text-center text-primary">Modelos de Receita</h2>
+      <div class="grid md:grid-cols-2 gap-6 max-w-6xl mx-auto">
+        <div>
+          <h3 class="text-xl md:text-2xl font-bold text-center text-accent mb-3">Para Empresas</h3>
+          ${[
+            '🆓 Gratuito (vaga teste limitada)',
+            '🎯 One-Shot (até preencher vaga ou 3 meses)',
+            '💼 Assinatura mensal (vagas ilimitadas)',
+            '🎓 Parcerias CPA/CPL com universidades e instituições de ensino'
+          ].map(t => `
+            <div class="p-5 bg-accent/10 border border-accent/30 rounded-2xl mb-3">
+              <p class="font-medium">${t}</p>
+            </div>
+          `).join('')}
+        </div>
+        <div>
+          <h3 class="text-xl md:text-2xl font-bold text-center text-primary mb-3">Para Candidatos</h3>
+          ${[
+            '🆓 Gratuito (acesso básico)',
+            '⭐ Premium (R$14,90/mês)',
+            '📚 Cursos e certificações extras (Marketplace educacional)'
+          ].map(t => `
+            <div class="p-5 bg-primary/10 border border-primary/30 rounded-2xl mb-3">
+              <p class="font-medium">${t}</p>
+            </div>
+          `).join('')}
         </div>
       </div>
-    `
+    </div>
+  `
+}
   },
   {
     title: 'Impacto Social',
@@ -252,26 +255,26 @@ const slides = [
       </div>
     `
   },
-  {
-    title: 'Gamificação e Capacitação',
-    background: 'bg-gradient-to-br from-white to-slate-100',
-    html: `
-      <div class="h-full flex flex-col justify-center space-y-6 px-4">
-        <h2 class="text-4xl md:text-5xl font-bold text-center text-primary">Gamificação e Capacitação</h2>
-        <div class="space-y-4 max-w-5xl mx-auto">
-          <div class="p-6 md:p-8 bg-gradient-to-r from-primary/20 to-accent/20 border border-primary/30 rounded-2xl shadow">
-            <p class="text-lg md:text-xl font-medium text-center"<p class="...">🪙 Usuários ganham coins ao concluir trilhas e testes</p>
-          </div>
-          <div class="p-6 md:p-8 bg-gradient-to-r from-accent/20 to-primary/20 border border-accent/30 rounded-2xl shadow">
-            <p class="text-lg md:text-xl font-medium text-center">🎁 Coins trocados por benefícios e microcertificações</p>
-          </div>
-          <div class="p-6 md:p-8 bg-gradient-to-r from-primary/20 to-accent/20 border border-primary/30 rounded-2xl shadow">
-            <p class="text-lg md:text-xl font-medium text-center">🏆 Sistema de conquistas e rankings</p>
-          </div>
+      {
+  title: 'Gamificação e Capacitação',
+  background: 'bg-gradient-to-br from-white to-slate-100',
+  html: `
+    <div class="h-full flex flex-col justify-center space-y-6 px-4">
+      <h2 class="text-4xl md:text-5xl font-bold text-center text-primary">Gamificação e Capacitação</h2>
+      <div class="space-y-4 max-w-5xl mx-auto">
+        <div class="p-6 md:p-8 bg-gradient-to-r from-primary/20 to-accent/20 border border-primary/30 rounded-2xl shadow">
+          <p class="text-lg md:text-xl font-medium text-center">💰 Usuários ganham coins ao concluir trilhas e testes</p>
+        </div>
+        <div class="p-6 md:p-8 bg-gradient-to-r from-accent/20 to-primary/20 border border-accent/30 rounded-2xl shadow">
+          <p class="text-lg md:text-xl font-medium text-center">🎁 Coins trocados por benefícios e microcertificações</p>
+        </div>
+        <div class="p-6 md:p-8 bg-gradient-to-r from-primary/20 to-accent/20 border border-primary/30 rounded-2xl shadow">
+          <p class="text-lg md:text-xl font-medium text-center">🏆 Sistema de conquistas e rankings</p>
         </div>
       </div>
-    `
-  },
+    </div>
+  `
+},
   {
     title: 'Tração e Pilotos',
     background: 'bg-gradient-to-br from-emerald-50 to-primary/10',
@@ -336,58 +339,56 @@ const slides = [
     `
   },
   {
-    title: 'Equipe',
-    background: 'bg-gradient-to-br from-white to-primary/10',
-    html: `
-      <div class="h-full flex flex-col justify-center space-y-8 px-4">
-        <h2 class="text-4xl md:text-5xl font-bold text-center text-primary">Equipe</h2>
-        <div class="max-w-3xl mx-auto space-y-6">
-          <div class="p-10 bg-primary/15 border border-primary/40 rounded-2xl shadow">
-            <div class="text-center space-y-4">
-              <div class="w-24 h-24 bg-primary/30 rounded-full mx-auto flex items-center justify-center text-4xl">👨‍💼</div>
-              <h3 class="text-2xl md:text-3xl font-bold">Rodrigo Volpato</h3>
-              <p class="text-base md:text-xl text-slate-600">Fundador e CEO</p>
-              <p class="text-base md:text-xl text-slate-600">Fundador e CEO — <a href="https://instagram.com/rodrigovolpa" target="_blank" class="text-primary hover:underline">@rodrigovolpa</a></p>
-            </div>
-          </div>
-          <div class="p-6 bg-accent/15 border border-accent/40 rounded-2xl shadow">
-            <p class="text-lg md:text-xl font-medium text-center">🚀 Time em expansão com foco em produto, growth e parcerias estratégicas</p>
-          </div>
+  title: 'Equipe',
+  background: 'bg-gradient-to-br from-white to-primary/10',
+  html: `
+    <div class="h-full flex flex-col justify-center items-center space-y-8 px-4">
+      <h2 class="text-4xl md:text-5xl font-bold text-center text-primary">Equipe</h2>
+      <div class="max-w-3xl mx-auto space-y-6 text-center">
+        <div class="p-10 bg-primary/15 border border-primary/40 rounded-2xl shadow space-y-4">
+          <div class="w-24 h-24 bg-primary/30 rounded-full mx-auto flex items-center justify-center text-4xl">👨‍💼</div>
+          <h3 class="text-2xl md:text-3xl font-bold">Rodrigo Volpato</h3>
+          <p class="text-base md:text-lg text-slate-600">Fundador & CEO</p>
+          <p class="text-base md:text-lg text-primary font-medium">@rodrigovolpa</p>
+        </div>
+        <div class="p-6 bg-accent/15 border border-accent/40 rounded-2xl shadow">
+          <p class="text-lg md:text-xl font-medium text-center">🚀 Time em expansão com foco em produto, growth e parcerias estratégicas</p>
         </div>
       </div>
-    `
-  },
+    </div>
+  `
+},
   {
-    title: 'Call to Action',
-    background: 'bg-gradient-to-br from-primary/20 via-accent/20 to-emerald-100',
-    html: `
-      <div class="h-full flex flex-col items-center justify-center text-center space-y-8 px-4">
-        <div class="space-y-4 max-w-4xl">
-          <div class="text-6xl">🚀</div>
-          <h2 class="text-3xl md:text-4xl font-bold leading-tight text-primary">
-            Vamos juntos transformar a empregabilidade no Brasil?
-          </h2>
+  title: 'Call to Action',
+  background: 'bg-gradient-to-br from-primary/20 via-accent/20 to-emerald-100',
+  html: `
+    <div class="h-full flex flex-col items-center justify-center text-center space-y-8 px-4">
+      <div class="space-y-4 max-w-4xl">
+        <div class="text-6xl">🚀</div>
+        <h2 class="text-3xl md:text-4xl font-bold leading-tight text-primary">
+          Vamos juntos transformar a empregabilidade no Brasil?
+        </h2>
+      </div>
+      <div class="space-y-4">
+        <div class="p-4 bg-primary/10 border border-primary/30 rounded-2xl">
+          <p class="text-lg md:text-xl font-medium">📧 contato@appmatchwork.com.br</p>
         </div>
-        <div class="space-y-4">
-          <div class="p-4 bg-primary/10 border border-primary/30 rounded-2xl">
-            <p class="text-lg md:text-xl font-medium">📧 contato@appmatchwork.com.br</p>
-          </div>
-          <div class="p-4 bg-accent/10 border border-accent/30 rounded-2xl">
-            <a href="https://www.linkedin.com/company/matchworkoficial" target="_blank" class="block p-4 bg-accent/10 border border-accent/30 rounded-2xl text-lg md:text-xl font-medium hover:bg-accent/20 transition">
-  🔗 LinkedIn
-</a>
-<a href="https://instagram.com/matchwork.oficial" target="_blank" class="block p-4 bg-primary/10 border border-primary/30 rounded-2xl text-lg md:text-xl font-medium hover:bg-primary/20 transition">
-  📸 Instagram @matchwork.oficial
-</a>
-          </div>
-        </div>
-        <a href="mailto:contato@appmatchwork.com.br"
-           class="inline-flex items-center justify-center text-xl px-10 py-4 bg-primary hover:bg-primary/90 text-white font-bold shadow-2xl hover:shadow-3xl transition transform hover:scale-105 rounded-xl">
-          Conectar-se conosco
+        <a href="https://www.linkedin.com/company/matchworkoficial" target="_blank"
+           class="block p-4 bg-accent/10 border border-accent/30 rounded-2xl text-lg md:text-xl font-medium">
+          🔗 LinkedIn
+        </a>
+        <a href="https://www.instagram.com/matchwork.oficial" target="_blank"
+           class="block p-4 bg-emerald-500/10 border border-emerald-500/30 rounded-2xl text-lg md:text-xl font-medium">
+          📸 Instagram @matchwork.oficial
         </a>
       </div>
-    `
-  }
+      <a href="mailto:contato@appmatchwork.com.br"
+         class="inline-flex items-center justify-center text-xl px-10 py-4 bg-primary hover:bg-primary/90 text-white font-bold shadow-2xl hover:shadow-3xl transition transform hover:scale-105 rounded-xl">
+        Conectar-se conosco
+      </a>
+    </div>
+  `
+}
 ];
 
 /* =============================
