--- a/presentation.html
+++ b/presentation.html
@@ -347,7 +347,10 @@ const slides = [
           <div class="w-24 h-24 bg-primary/30 rounded-full mx-auto flex items-center justify-center text-4xl">👨‍💼</div>
           <h3 class="text-2xl md:text-3xl font-bold">Rodrigo Volpato</h3>
           <p class="text-base md:text-lg text-slate-600">Fundador & CEO</p>
-          <p class="text-base md:text-lg text-primary font-medium">@rodrigovolpa</p>
+          <a href="https://www.instagram.com/rodrigovolpa" target="_blank" 
+             class="text-base md:text-lg text-primary font-medium hover:underline">
+             @rodrigovolpa
+          </a>
         </div>
         <div class="p-6 bg-accent/15 border border-accent/40 rounded-2xl shadow">
           <p class="text-lg md:text-xl font-medium text-center">🚀 Time em expansão com foco em produto, growth e parcerias estratégicas</p>
