--- a/presentation.html
+++ b/presentation.html
@@ -472,6 +472,63 @@ pdfBtn.addEventListener('click', async ()=>{
 
 /* Inicializa */
 renderSlide(current);
+  <script>
+  const slides = document.querySelectorAll(".slide");
+  const bullets = document.querySelectorAll(".bullet");
+  let currentSlide = 0;
+
+  function showSlide(index) {
+    slides.forEach((slide, i) => {
+      slide.classList.toggle("hidden", i !== index);
+      bullets[i].classList.toggle("bg-purple-600", i === index);
+      bullets[i].classList.toggle("bg-gray-400", i !== index);
+    });
+    currentSlide = index;
+  }
+
+  function nextSlide() {
+    let newIndex = (currentSlide + 1) % slides.length;
+    showSlide(newIndex);
+  }
+
+  function prevSlide() {
+    let newIndex = (currentSlide - 1 + slides.length) % slides.length;
+    showSlide(newIndex);
+  }
+
+  // Navegação por teclado (desktop)
+  document.addEventListener("keydown", (e) => {
+    if (e.key === "ArrowRight") nextSlide();
+    if (e.key === "ArrowLeft") prevSlide();
+  });
+
+  // Navegação pelos bullets (cliques)
+  bullets.forEach((bullet, index) => {
+    bullet.style.cursor = "pointer";
+    bullet.addEventListener("click", () => showSlide(index));
+  });
+
+  // Navegação por swipe (mobile)
+  let startX = 0;
+  let endX = 0;
+
+  document.addEventListener("touchstart", (e) => {
+    startX = e.changedTouches[0].screenX;
+  }, false);
+
+  document.addEventListener("touchend", (e) => {
+    endX = e.changedTouches[0].screenX;
+    handleGesture();
+  }, false);
+
+  function handleGesture() {
+    if (endX < startX - 50) nextSlide();  // swipe left
+    if (endX > startX + 50) prevSlide();  // swipe right
+  }
+
+  // Mostra o primeiro slide ao carregar
+  showSlide(currentSlide);
 </script>
+
 </body>
 </html>
