--- a/presentation.html
+++ b/presentation.html
@@ -473,6 +473,7 @@ pdfBtn.addEventListener('click', async ()=>{
 /* Inicializa */
 renderSlide(current);
   <script>
+  <script>
   const slides = document.querySelectorAll(".slide");
   const bullets = document.querySelectorAll(".bullet");
   let currentSlide = 0;
