--- a/presentation.html
+++ b/presentation.html
@@ -472,7 +472,7 @@ pdfBtn.addEventListener('click', async ()=>{
 
 /* Inicializa */
 renderSlide(current);
-  
+</script>
  <script>
   const slides = document.querySelectorAll(".slide");
   const bullets = document.querySelectorAll(".bullet");
